--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.6.0",
+    "bcryptjs": "^3.0.2",
+    "celebrate": "^15.0.3",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "joi": "^17.13.3",
     "together-ai": "^0.15.1"
   },
   "devDependencies": {
