--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^6.6.0",
     "bcryptjs": "^3.0.2",
     "celebrate": "^15.0.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "joi": "^17.13.3",
@@ -21,6 +22,7 @@
     "together-ai": "^0.15.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.14.1",
